--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -192,7 +192,7 @@
     "description_rel_fee": "As a percentage of the amounts you help others with improved privacy.",
     "feedback_invalid_rel_fee": "Please provide a relative fee between {{feeRelPercentageMin}} and {{feeRelPercentageMax}}.",
     "label_abs_fee": "Absolute fee in sats",
-    "earn.description_abs_fee": "An absolute amount you get for helping others to improve their privacy.",
+    "description_abs_fee": "An absolute amount you get for helping others to improve their privacy.",
     "feedback_invalid_abs_fee": "Please provide an absolute fee.",
     "label_min_amount": "Minimum amount in sats",
     "feedback_invalid_min_amount": "Please provide an absolute fee.",
