--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -137,7 +137,7 @@
     "loading": "Loading",
     "title": "Send bitcoin",
     "subtitle": "Collaborative transactions increase the privacy of yourself and others.",
-    "label_num_collaborators": "Number of collaborators:",
+    "label_num_collaborators": "Number of collaborators: {{ numCollaborators }}",
     "input_num_collaborators_placeholder": "Other",
     "description_num_collaborators": "A higher number is better for privacy, but also increases the fee.",
     "error_invalid_num_collaborators": "Please use between {{ minNumCollaborators }} and {{ maxNumCollaborators }} collaborators.",
