--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1,10 +1,206 @@
 {
+  "navbar": {
+    "title": "Jam",
+    "button_create_wallet": "Create Wallet",
+    "tab_send": "Send",
+    "tab_receive": "Receive",
+    "tab_earn": "Earn",
+    "joining_in_progress": "Joining",
+    "menu_mobile": "Menu",
+    "menu_mobile_settings": "Settings",
+    "menu_mobile_wallets": "Wallets"
+  },
+  "app": {
+    "alert_no_connection": "No connecction to backend: {{ connectionError }}"
+  },
+  "footer": {
+    "warning": "This is alpha software.<br /><1>Read this before using.</1>",
+    "warning_alert_title": "Warning",
+    "warning_alert_text": "While JoinMarket is tried and tested, Jam is not. It is in an alpha stage, so use with caution.",
+    "warning_alert_button_ok": "Fine with me.",
+    "docs": "Docs",
+    "features": "Features",
+    "github": "GitHub",
+    "twitter": "Twitter",
+    "connected": "Connected",
+    "disconnected": "Disconnected"
+  },
+  "onboarding": {
+    "splashscreen_title": "Jam",
+    "splashscreen_subtitle": "A friendly UI for JoinMarket",
+    "splashscreen_button_get_started": "Get started",
+    "splashscreen_button_skip_intro": "Skip intro",
+    "splashscreen_description_line1": "Your wallet, your coins.",
+    "splashscreen_description_line2": "100% open-source & open-design.",
+    "splashscreen_warning_title": "Warning",
+    "splashscreen_warning_text": "While JoinMarket is tried and tested, Jam is not. It is in an alpha stage, so use with caution. <1>Help us improve the project on GitHub.</1>",
+    "screen_1_title": "Welcome to Jam for JoinMarket!",
+    "screen_1_description": "JoinMarket is a privacy-focused software solution that aims to improve the confidentiality and privacy of your bitcoin transactions. It facilitates the creation of collaborative transactions through a peer-to-peer marketplace.",
+    "screen_2_title": "Collaborative Transactions",
+    "screen_2_description": "To have strong privacy guarantees in the open and transparent world of bitcoin, special kinds of transactions have to be created. JoinMarket helps you to create these transactions in an easy and automated way.",
+    "screen_3_title": "You Are In Control",
+    "screen_3_description": "JoinMarket is fully non-custodial, meaning that you always have full control over your funds. The system uses Bitcoin’s smart contracts to make sure that all transactions are atomic and your funds are secure at all times.",
+    "screen_4_title": "No Trusted Third Parties",
+    "screen_4_description": "Since JoinMarket is a peer-to-peer system, trusted third parties are eliminated from the get-go. This unique market-driven approach reduces counterparty risk to a minimum.",
+    "screen_5_title": "Privacy for All",
+    "screen_5_description": "JoinMarket is free and open-source software without a single point of failure. Everyone is free to use it and build upon it.",
+    "button_next": "Next",
+    "button_complete": "Let's go!"
+  },
   "wallets": {
     "title": "Your Wallets",
     "subtitle_no_wallets": "It looks like you do not have a wallet, yet.",
     "text_loading": "Loading wallets",
     "button_new_wallet": "Create new wallet",
     "alert_wallet_open": "There can be only one active wallet. If you want to open another wallet, please lock '{{ currentWalletName }}' first.",
-    "error_loading_failed": "Loading wallets failed."
+    "error_loading_failed": "Loading wallets failed.",
+    "wallet_preview": {
+      "alert_wallet_already_unlocked": "{{ walletName }} is already unlocked.",
+      "alert_other_wallet_unlocked": "{{ walletName }} is currently in use, please lock it first.",
+      "alert_wallet_locked_successfully": "{{ walletName }} locked successfully.",
+      "alert_wallet_already_locked": "{{ walletName }} already locked.",
+      "wallet_active": "Active",
+      "wallet_inactive": "Inactive",
+      "placeholder_password": "Password",
+      "button_open": "Open",
+      "button_lock": "Lock",
+      "button_unlock": "Unlock",
+      "button_locking": "Locking",
+      "button_unlocking": "Unlocking",
+      "feedback_missing_password": "Please set the wallet's password.",
+      "alert_missing_token": "This wallet is active, but there is no token to interact with it. Please remove the lock file on the server."
+    }
+  },
+  "create_wallet": {
+    "title": "Create Wallet",
+    "title_wallet_created": "Wallet created successfully!",
+    "subtitle_wallet_created": "Please write down your seed phrase and password! Without this information you will not be able to access and recover your wallet!",
+    "alert_other_wallet_unlocked": "Currently <1>{{ walletName }}</1> is active. You need to lock it first. <3>Go back</3>.",
+    "feedback_valid": "Looks good!",
+    "label_wallet_name": "Wallet Name",
+    "placeholder_wallet_name": "Your Wallet...",
+    "feedback_invalid_wallet_name": "Please set a wallet name.",
+    "label_password": "Password",
+    "placeholder_password": "Choose a secure password...",
+    "feedback_invalid_password": "Please set a password.",
+    "button_create": "Create",
+    "button_creating": "Creating",
+    "alert_confirmation_failed": "Wallet confirmation failed.",
+    "confirmation_label_wallet_name": "Wallet Name",
+    "confirmation_label_password": "Password",
+    "confirmation_toggle_reveal_info": "Reveal sensitive information",
+    "confirmation_toggle_info_written_down": "I've written down the information above.",
+    "confirmation_button_fund_wallet": "Fund Wallet"
+  },
+  "current_wallet": {
+    "text_loading": "Loading",
+    "button_deposit": "Deposit",
+    "button_withdraw": "Withdraw",
+    "button_switch_wallet": "Switch wallet",
+    "error_loading_failed": "Loading wallet failed."
+  },
+  "current_wallet_advanced": {
+    "error_loading_utxos_failed": "Loading UTXOs failed.",
+    "title_fidelity_bonds": "Fidelity Bonds",
+    "button_show_utxos": "Show UTXOs",
+    "button_hide_utxos": "Hide UTXOs",
+    "alert_no_utxos": "No UTXOs available.",
+    "account": "Account",
+    "error_freeze_failed": "Request failed.",
+    "label_locked_until": "Locked until",
+    "label_frozen": "frozen",
+    "label_unconfirmed": "unconfirmed",
+    "button_freeze": "freeze",
+    "button_unfreeze": "unfreeze",
+    "account_button_send": "Send",
+    "account_button_receive": "Receive",
+    "account_heading_external_addresses": "External Addresses",
+    "account_heading_internal_addresses": "Internal Addresses"
+  },
+  "settings": {
+    "title": "Settings",
+    "show_balance": "Show Balance",
+    "hide_balance": "Hide Balance",
+    "use_sats": "Display amounts in sats",
+    "use_btc": "Display amounts in bitcoin",
+    "use_dark_theme": "Switch to dark theme",
+    "use_light_theme": "Switch to light theme",
+    "use_normal_mode": "Use normal wallet mode",
+    "use_dev_mode": "Use developer wallet mode",
+    "text_help_translate": "Missing your language? Help us out!",
+    "show_seed": "Show seed phrase",
+    "hide_seed": "Hide seed phrase",
+    "reveal_seed": "Reveal seed phrase",
+    "error_loading_seed_failed": "Could not retrieve seed phrase."
+  },
+  "send": {
+    "loading": "Loading",
+    "title": "Send bitcoin",
+    "subtitle": "Collaborative transactions increase the privacy of yourself and others.",
+    "label_num_collaborators": "Number of collaborators: {{ numCollaborators }}",
+    "input_num_collaborators_placeholder": "Other",
+    "description_num_collaborators": "A higher number is better for privacy, but also increases the fee.",
+    "error_invalid_num_collaborators": "Please use between {{ minNumCollaborators }} and {{ maxNumCollaborators }} collaborators.",
+    "taker_error_message_max_fees_config_missing": "Config variables 'max_cj_fee_rel' and 'max_cj_fee_abs' must be set in your joinmarket.cfg in order to send collaborative transactions. Consider adding them to your config manually.",
+    "error_loading_wallet_failed": "Loading wallet failed.",
+    "error_loading_min_makers_failed": "Loading config value 'minimum_makers' failed.",
+    "alert_payment_successful": "Payment successful: Sent {{ amount }} sats to {{ address }}.",
+    "alert_coinjoin_started": "Collaborative transaction started",
+    "text_maker_running": "Earn is active. Stop the service in order to send collaborative transactions.",
+    "text_coinjoin_already_running": "A collaborative transaction is currently in progress.",
+    "label_recipient": "Recipient",
+    "placeholder_recipient": "Enter address...",
+    "feedback_invalid_recipient": "Please provide a recipient address.",
+    "label_account": "Privacy level to send from",
+    "label_account_dev_mode": "Account to send from",
+    "account_selector_option": "Privacy Level {{ number }}",
+    "account_selector_option_dev_mode": "Account {{ number }}",
+    "label_amount": "Amount in sats",
+    "placeholder_amount": "Enter amount...",
+    "feedback_invalid_amount": "Please provide a valid amount.",
+    "toggle_coinjoin": "Send as collaborative transaction for improved privacy",
+    "button_send": "Send",
+    "text_sending": "Sending"
+  },
+  "receive": {
+    "title": "Receive",
+    "subtitle": "Send bitcoin to the address below.",
+    "error_loading_address_failed": "Loading new address failed.",
+    "error_copy_address_failed": "Could not copy address.",
+    "button_copy_address": "Copy",
+    "text_copy_address_confirmed": "Copied",
+    "button_settings": "Settings",
+    "label_choose_account": "Choose account",
+    "account_selector_option_dev_mode": "Account {{ number }}",
+    "label_amount": "Amount to request in sats",
+    "feedback_invalid_amount": "Please provide a valid amount.",
+    "button_new_address": "Get new address",
+    "text_getting_address": "Getting new address"
+  },
+  "earn": {
+    "title": "Earn bitcoin",
+    "subtitle": "By making your bitcoin available for others, you help them improve their privacy and can also earn a yield.",
+    "alert_empty_report": "The report is empty.",
+    "text_report_length": "Showing {{ visibleLines }} of {{ linesWithoutHeader }} entries",
+    "error_loading_report_failed": "Failed to load yield generator report.",
+    "alert_starting": "Service is starting.",
+    "alert_stopping": "Service is stopping.",
+    "alert_running": "Service is running.",
+    "alert_coinjoin_in_progress": "A collaborative transaction is currently in progress.",
+    "toggle_rel_offer": "Relative offer",
+    "label_rel_fee": "Relative fee {{ fee }}",
+    "description_rel_fee": "As a percentage of the amounts you help others with improved privacy.",
+    "feedback_invalid_rel_fee": "Please provide a relative fee between {{feeRelPercentageMin}} and {{feeRelPercentageMax}}.",
+    "label_abs_fee": "Absolute fee in sats",
+    "description_abs_fee": "An absolute amount you get for helping others to improve their privacy.",
+    "feedback_invalid_abs_fee": "Please provide an absolute fee.",
+    "label_min_amount": "Minimum amount in sats",
+    "feedback_invalid_min_amount": "Please provide a minimum amount.",
+    "button_start": "Start",
+    "button_stop": "Stop",
+    "text_starting": "Starting",
+    "text_stopping": "Stopping",
+    "button_show_report": "Show report",
+    "button_hide_report": "Hide report"
   }
 }
