Add more translations

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -90,7 +90,14 @@
     "confirmation_label_password": "Password",
     "confirmation_toggle_reveal_info": "Reveal sensitive information",
     "confirmation_toggle_info_written_down": "I've written down the information above.",
-    "confirmation_button_fund_wallet": "Fund Wallet"
+    "confirmation_button_fund_wallet": "Fund Wallet",
+    "confirm_backup": "Confirm seed phrase backup",
+    "enter_words": "Enter each word in sequential order.",
+    "seed_confirmed": "Seed phrase confirmed.",
+    "back_button": "Back",
+    "skip_button": "Skip",
+    "next_button": "Next",
+    "word": "Word"
   },
   "current_wallet": {
     "text_loading": "Loading",
