--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -68,7 +68,12 @@
       "button_locking": "Locking",
       "button_unlocking": "Unlocking",
       "feedback_missing_password": "Please set the wallet's password.",
-      "alert_missing_token": "This wallet is active, but there is no token to interact with it. Please remove the lock file on the server."
+      "alert_missing_token": "This wallet is active, but there is no token to interact with it. Please remove the lock file on the server.",
+      "modal_lock_wallet_title": "Confirm locking",
+      "modal_lock_wallet_maker_running_text": "Earn is active. If you lock your wallet now, the service will be stopped. Do you want to just logout and keep it running?",
+      "modal_lock_wallet_coinjoin_in_progress_text": "A collaborative transaction is currently in progress. If you lock your wallet now, the transaction will be aborted. Do you want to just logout and keep it running?",
+      "modal_lock_wallet_button_confirm": "No, lock wallet",
+      "modal_lock_wallet_button_accept_suggestion_action": "Yes, just logout"
     }
   },
   "create_wallet": {
