--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -68,7 +68,12 @@
       "button_locking": "Locking",
       "button_unlocking": "Unlocking",
       "feedback_missing_password": "Please set the wallet's password.",
-      "alert_missing_token": "This wallet is active, but there is no token to interact with it. Please remove the lock file on the server."
+      "modal_lock_wallet_title": "Confirm locking",
+      "modal_lock_wallet_maker_running_text": "Earn is active. Locking the wallet will stop the service.",
+      "modal_lock_wallet_coinjoin_in_progress_text": "A collaborative transaction is currently in progress. Locking the wallet will stop the service.",
+      "modal_lock_wallet_alternative_action_text": "Alternatively, just close the window to log out.",
+      "modal_lock_wallet_button_confirm": "Yes, lock wallet",
+      "modal_lock_wallet_button_cancel": "Cancel"
     }
   },
   "create_wallet": {
