feat: add cheatsheet
this is still work in progress

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -18,6 +18,7 @@
     "warning_alert_title": "Warning",
     "warning_alert_text": "While JoinMarket is tried and tested, Jam is not. It is in an alpha stage, so use with caution.",
     "warning_alert_button_ok": "Fine with me.",
+    "cheatsheet": "Cheatsheet",
     "docs": "Docs",
     "features": "Features",
     "github": "GitHub",
