feat: add password confirmation on create screen

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -88,6 +88,9 @@
     "label_password": "Password",
     "placeholder_password": "Choose a secure password...",
     "feedback_invalid_password": "Please set a password.",
+    "label_password_confirm": "Confirm password",
+    "placeholder_password_confirm": "Confirm the password...",
+    "feedback_invalid_password_confirm": "Given passwords do not match.",
     "button_create": "Create",
     "button_creating": "Creating",
     "alert_confirmation_failed": "Wallet confirmation failed.",
