ui: move seed phrase on settings page to modal (#206)
* ui: move seed phrase on settings page to modal

* custom btn-close style only inside modal-header

* better name for i18n key of seed modal info text

* review: remove unnecessary 'preventDefault' on settings page

* review: remove angle brackets from modal header

Co-authored-by: Daniel <10026790+dnlggr@users.noreply.github.com>

Co-authored-by: Daniel <10026790+dnlggr@users.noreply.github.com>

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -143,7 +143,8 @@
     "show_seed": "Show seed phrase",
     "hide_seed": "Hide seed phrase",
     "reveal_seed": "Reveal seed phrase",
-    "error_loading_seed_failed": "Could not retrieve seed phrase."
+    "error_loading_seed_failed": "Could not retrieve seed phrase.",
+    "seed_modal_info_text": "Please write down your seed phrase and password! Without this information you will not be able to access and recover your wallet!"
   },
   "send": {
     "loading": "Loading",
