--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -82,12 +82,15 @@
     "subtitle_wallet_created": "Please write down your seed phrase and password! Without this information you will not be able to access and recover your wallet!",
     "alert_other_wallet_unlocked": "Currently <1>{{ walletName }}</1> is active. You need to lock it first. <3>Go back</3>.",
     "feedback_valid": "Looks good!",
-    "label_wallet_name": "Wallet Name",
+    "label_wallet_name": "Wallet name",
     "placeholder_wallet_name": "Your Wallet...",
     "feedback_invalid_wallet_name": "Please set a wallet name.",
-    "label_password": "Password",
+    "label_password": "Password to unlock the wallet",
     "placeholder_password": "Choose a secure password...",
     "feedback_invalid_password": "Please set a password.",
+    "label_password_confirm": "Confirm password",
+    "placeholder_password_confirm": "Repeat the password...",
+    "feedback_invalid_password_confirm": "Given passwords do not match.",
     "button_create": "Create",
     "button_creating": "Creating",
     "alert_confirmation_failed": "Wallet confirmation failed.",
