review: improve wording - 'very private' => 'more private'

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -257,7 +257,7 @@
     },
     "item_7": {
       "title": "<0>Sweep</0> out your wallet completely.",
-      "description": "Your coins should be very private by now ‒ move them out."
+      "description": "Your coins should be more private by now ‒ move them out."
     },
     "item_8": {
       "title": "Go to step one and <1>repeat</1>.",
