review: improve wording - 'add more noise' => 'increase the privacy of all'

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -253,7 +253,7 @@
     },
     "item_6": {
       "title": "Time to <1>earn</1> again ‒ YIELD!",
-      "description": "Optional ‒ by switching back and forth you add more noise."
+      "description": "Optional ‒ by switching back and forth you increase the privacy of all."
     },
     "item_7": {
       "title": "<0>Sweep</0> out your wallet completely.",
