--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -164,7 +164,7 @@
     "error_loading_min_makers_failed": "Loading config value 'minimum_makers' failed.",
     "alert_payment_successful": "Payment successful: Sent {{ amount }} sats to {{ address }}.",
     "alert_coinjoin_started": "Collaborative transaction started",
-    "text_maker_running": "Earn is active. Stop the service in order to send collaborative transactions.",
+    "text_maker_running": "<0>Earn</0> is active. Stop the service in order to send collaborative transactions.",
     "text_coinjoin_already_running": "A collaborative transaction is currently in progress.",
     "label_recipient": "Recipient",
     "placeholder_recipient": "Enter address...",
