Add social icons to footer

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -20,9 +20,8 @@
     "warning_alert_button_ok": "Fine with me.",
     "cheatsheet": "Cheatsheet",
     "docs": "Docs",
-    "features": "Features",
     "github": "GitHub",
-    "twitter": "Twitter",
+    "telegram": "Telegram",
     "connected": "Connected",
     "disconnected": "Disconnected"
   },
