--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -19,9 +19,6 @@
     "warning_alert_text": "While JoinMarket is tried and tested, Jam is not. It is in an alpha stage, so use with caution.",
     "warning_alert_button_ok": "Fine with me.",
     "cheatsheet": "Cheatsheet",
-    "docs": "Docs",
-    "github": "GitHub",
-    "telegram": "Telegram",
     "connected": "Connected",
     "disconnected": "Disconnected"
   },
@@ -147,7 +144,9 @@
     "hide_seed": "Hide seed phrase",
     "reveal_seed": "Reveal seed phrase",
     "error_loading_seed_failed": "Could not retrieve seed phrase.",
-    "seed_modal_info_text": "Please write down your seed phrase and password! Without this information you will not be able to access and recover your wallet!"
+    "seed_modal_info_text": "Please write down your seed phrase and password! Without this information you will not be able to access and recover your wallet!",
+    "github": "GitHub",
+    "telegram": "Telegram"
   },
   "send": {
     "loading": "Loading",
