ui: display earn report as overlay

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -225,7 +225,9 @@
     "text_starting": "Starting",
     "text_stopping": "Stopping",
     "button_show_report": "Show report",
-    "button_hide_report": "Hide report"
+    "report": {
+      "title": "Report"
+    }
   },
   "cheatsheet": {
     "title": "The Cheatsheet",
